<resources>
    <string name="app_name">EmbeddedTool</string>

    <string name="none_found">None Found</string>
    <string name="none_paired">None Paired</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bluetooth_secure">安全连接</string>
    <string name="bluetooth_insecure">非安全连接</string>
    <string name="bluetooth_discoverable">可被发现</string>
    <string name="action_settings">高级设置</string>
    <string name="action_settings_advanced">设置</string>
    <string name="save_template">保存模板</string>
    <string name="clear_all">清空</string>
    <string name="template_list_empty_text">这里看起来\n似乎空空如也～</string>
    <string name="bluetooth">蓝牙操作</string>
    <string name="title_activity_advanced_settings">AdvancedSettingsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_recovery">恢复默认</string>
    <string name="action_choose_template">选择模板</string>
    <string name="action_document">说明文档</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_devices">设备名称</string>
    <string name="ble_not_supported">不支持LE</string>
    <string name="error_bluetooth_not_supported">不支持蓝牙</string>
    <string name="connected">蓝牙已连接</string>
    <string name="disconnected">蓝牙未连接</string>
    <string name="no_data">无数据</string>
    <string name="string_save_as_template">保存为模板</string>
    <string name="string_dialog_button_cancel">取消</string>
    <string name="string_save_as_template_success">模板保存成功!</string>
    <string name="string_dialog_button_save">保存</string>
    <string name="string_dialog_template_hint">保存的模板名称</string>
    <string name="string_toast_connected_device">"连接到设备： "</string>
    <string name="string_app_name">嵌入式助手</string>
    <string name="string_connecting_device">正在连接设备......</string>
    <string name="string_connected_device">已连接设备</string>
    <string name="string_toast_bind_tips1">编辑框只能绑定发送类型的按钮～</string>
    <string name="activity_lable_select_template">选择模板</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="large_text_1_title">
        "Material is the metaphor."
    </string>
    <string name="large_text_1_content">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>

    <string name="large_text_2_title">
        "Bold, graphic, intentional."
    </string>
    <string name="large_text_2_content">
        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"
    </string>

    <string name="large_text_3_title">
        "Motion provides meaning."
    </string>
    <string name="large_text_3_content">
        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
    </string>

    <string name="large_text_4_title">
        "3D world."
    </string>
    <string name="large_text_4_content">
        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"
    </string>

    <string name="large_text_5_title">
        "Light and shadow."
    </string>
    <string name="large_text_5_content">
        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
    </string>

    <string name="large_text_6_title">
        "Resting elevation."
    </string>
    <string name="large_text_6_content">
        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"
    </string>

    <string name="large_text_7_title">
        "Component elevations."
    </string>
    <string name="large_text_7_content">
        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

    </string>

    <string name="large_text_8_title">
        "Responsive elevation and dynamic elevation offsets."
    </string>
    <string name="large_text_8_content">
        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"
    </string>

    <string name="large_text_9_title">
        "Avoiding elevation interference."
    </string>
    <string name="large_text_9_content">
        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
