<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="me.stupideme.embeddedtool.view.activity.MainActivity">

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="80"
        android:title="@string/clear_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save_template"
        android:icon="@drawable/ic_save_white_24dp"
        android:orderInCategory="80"
        android:title="@string/save_template"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bluetooth"
        android:title="@string/bluetooth">
        <menu>
            <item
                android:id="@+id/action_bluetooth_secure"
                android:orderInCategory="80"
                android:title="@string/bluetooth_secure"
                app:showAsAction="never" />

            <!--<item-->
                <!--android:id="@+id/action_bluetooth_insecure"-->
                <!--android:orderInCategory="90"-->
                <!--android:title="@string/bluetooth_insecure"-->
                <!--app:showAsAction="never" />-->

            <item
                android:id="@+id/action_bluetooth_discoverable"
                android:orderInCategory="90"
                android:title="@string/bluetooth_discoverable"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_document"
        android:title="@string/action_document"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_select_template"
        android:orderInCategory="90"
        android:title="@string/action_choose_template"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings_advanced"
        android:orderInCategory="100"
        android:title="@string/action_settings_advance"
        app:showAsAction="never" />
</menu>
